Minor CSS changes

--- a/index.html
+++ b/index.html
@@ -53,9 +53,10 @@
         }
 
         .subtitle {
-            font-size: 1.6rem;
+            font-size: 1.65rem;
             margin-bottom: 1rem; /* Reduced margin */
             opacity: 0.9;
+            min-height: 1.5rem; 
         }
 
         .rotating-tagline {
