Remove -bebkit to align with HTML5 standards

--- a/index.html
+++ b/index.html
@@ -46,11 +46,8 @@
             font-size: 4rem;
             font-weight: 800;
             margin-bottom: 1.2rem;
-            background: linear-gradient(45deg, #fff, #f0f0f0);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-clip: text;
-        }
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+}
 
         .subtitle {
             font-size: 1.65rem;
@@ -133,7 +130,7 @@
                 transform: translateX(60px) scale(0.7);
             }
             to {
-                opacity: 1;
+                opacity: 0.8;
                 transform: translateX(0) scale(1);
             }
         }
